- Se modificó el modelo Usuario para incluir el campo de rol con el valor predeterminado USER. - Se aseguraron los métodos ProductoController con @PreAuthorize para el rol ADMIN. - Se aseguró UsuarioController con @PreAuthorize para el rol ADMIN. - Se actualizó CustomUserDetailsService para asignar roles a los usuarios durante la autenticación.